chore: update URL
Co-authored-by: TrueGRF <truegrf@truebrain.nl>

--- a/truegrf.yaml
+++ b/truegrf.yaml
@@ -2,4 +2,5 @@ description: Empty TrueGRF project
 grfid: TRU1
 license: CC0-1.0
 name: TrueGRF
+url: https://github.com/twiedenbein/test
 version: 4
